test/fail/generics-override.grace
constructor above {
  method name<T> {}
}

object {
  inherits above

  method name {}
}
